# py-ptc

./: pyproject.toml
py_ptc/: cli.py  methods.py  templates.py
tests/: test_py_ptc.py
